Move playerNum to object init